--- a/shared/common/pom.xml
+++ b/shared/common/pom.xml
@@ -126,6 +126,16 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+			
+			<dependency>
+				<groupId>mockit</groupId>
+				<artifactId>jmockit</artifactId>
+			</dependency>
+			<dependency>
+				<groupId>org.testng</groupId>
+				<artifactId>testng</artifactId>
+			</dependency>
 	</dependencies>
 
 	<profiles>
