--- a/manager/deployer/src/main/resources/otter.properties
+++ b/manager/deployer/src/main/resources/otter.properties
@@ -1,15 +1,17 @@
 ## otter manager domain name
 otter.domainName = 127.0.0.1
 ## otter manager http port
-otter.port = 8080
+otter.port = 7010
 ## jetty web config xml
 otter.jetty = jetty.xml
 
 ## otter manager database config
 otter.database.driver.class.name = com.mysql.jdbc.Driver
-otter.database.driver.url = jdbc:mysql://127.0.0.1:3306/otter
-otter.database.driver.username = root
-otter.database.driver.password = iharding
+##10.0.41.131
+otter.database.driver.url = jdbc:mysql://localhost:3306/otter
+otter.database.driver.username = otter
+otter.database.driver.password = otter
+
 
 ## otter communication port
 otter.communication.manager.port = 1099
@@ -17,8 +19,9 @@ otter.communication.manager.port = 1099
 ## otter communication pool size
 otter.communication.pool.size = 10
 
-## default zookeeper address
-otter.zookeeper.cluster.default = 127.0.0.1:2181
+## default zookeeper address 172.16.28.99  
+otter.zookeeper.cluster.default = localhost:2181
+##10.0.41.137:2181,10.0.41.136:2181,10.0.41.135:2181
 ## default zookeeper sesstion timeout = 60s
 otter.zookeeper.sessionTimeout = 60000
 
