--- a/manager/deployer/src/main/resources/otter.properties
+++ b/manager/deployer/src/main/resources/otter.properties
@@ -1,16 +1,18 @@
 ## otter manager domain name
-otter.domainName = 127.0.0.1
+otter.domainName = 172.28.25.192
 ## otter manager http port
-otter.port = 7010
+otter.port = 8080
 ## jetty web config xml
 otter.jetty = jetty.xml
 
 ## otter manager database config
 otter.database.driver.class.name = com.mysql.jdbc.Driver
+
 ##10.0.41.131
-otter.database.driver.url = jdbc:mysql://localhost:3306/otter
-otter.database.driver.username = otter
-otter.database.driver.password = otter
+otter.database.driver.url = jdbc:mysql://172.28.3.159:3306/otter
+otter.database.driver.username = root
+otter.database.driver.password = 123456
+
 
 
 ## otter communication port
@@ -19,9 +21,11 @@ otter.communication.manager.port = 1099
 ## otter communication pool size
 otter.communication.pool.size = 10
 
+
 ## default zookeeper address 172.16.28.99  
-otter.zookeeper.cluster.default = localhost:2181
+otter.zookeeper.cluster.default = 172.28.3.158:2181
 ##10.0.41.137:2181,10.0.41.136:2181,10.0.41.135:2181
+
 ## default zookeeper sesstion timeout = 60s
 otter.zookeeper.sessionTimeout = 60000
 
