--- a/node/common/pom.xml
+++ b/node/common/pom.xml
@@ -170,6 +170,10 @@
 					<groupId>com.google.inject.extensions</groupId>
 					<artifactId>guice-servlet</artifactId>
 				</exclusion>
+				<exclusion>
+					 <groupId>org.slf4j</groupId>
+					 <artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -220,6 +224,10 @@
 			<artifactId>hadoop-common</artifactId>
 			<exclusions>
 				<exclusion>
+					 <groupId>org.slf4j</groupId>
+					 <artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+				<exclusion>
 					<artifactId>guava</artifactId>
 					<groupId>com.google.guava</groupId>
 				</exclusion>
@@ -254,6 +262,16 @@
 				<groupId>org.apache.kafka</groupId>
 				<artifactId>kafka_2.11</artifactId>
 				<version>0.10.1.1</version>
+				<exclusions>
+				    <exclusion>
+						 <groupId>org.slf4j</groupId>
+						 <artifactId>slf4j-log4j12</artifactId>
+				    </exclusion>
+					<exclusion>
+					 	 <groupId>com.101tec</groupId>
+ 						 <artifactId>zkclient</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 		<!-- Cassandra -->
 		<dependency>
