--- a/node/deployer/pom.xml
+++ b/node/deployer/pom.xml
@@ -13,6 +13,12 @@
 	<url>http://github.com/alibaba/otter</url>
 	
 	<dependencies>
+	
+		<dependency>
+		    <groupId>log4j</groupId>
+		    <artifactId>log4j</artifactId>
+		    <version>1.2.14</version>
+		</dependency>
 		<dependency>
 			<groupId>com.alibaba.otter</groupId>
 			<artifactId>node.common</artifactId>
